--- a/client-ui/package.json
+++ b/client-ui/package.json
@@ -40,6 +40,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "less": "^3.9.0",
+    "moment": "^2.24.0",
+    "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^4.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
